--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Admin panel for SocialBlog" />
+  <meta name="description" content="Admin panel for gladify" />
   <meta charset="utf-8" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
@@ -37,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Admin | SocialBlog</title>
+  <title>Admin | gladify</title>
 </head>
 
 <body id="primary">
